# mcp-context-protector

./: .gitignore  Makefile  README.md  context-protector.sh  guardrails.py  main.py  mcp-context-protector.sh  mcp_config.py  mcp_models.py  mcp_wrapper.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  docs.yml  release.yml  tests.yml  zizmor.yml
contextprotector/: __init__.py  __main__.py  guardrail_types.py  guardrails.py  mcp_config.py  mcp_wrapper.py  quarantine.py  quarantine_cli.py
contextprotector/guardrail_providers/: llama_firewall.py  mock_provider.py
contextprotector/tests/: dynamic_downstream_server.py  resource_test_server.py  simple_sse_server.py  sse_server_utils.py  test_ansi_visualization.py  test_config_approval_security.py  test_dynamic_downstream_server.py  test_dynamic_wrapper.py  test_granular_tool_approval.py  test_granular_wrapper_behavior.py  test_guardrails_loading.py  test_mcp_config_database.py  test_mcp_wrapper.py  test_notification_forwarding.py  test_prompt_proxying.py  test_quarantine.py  test_quarantine_integration.py  test_quarantine_release_simple.py  test_quarantine_release_tool.py  test_resource_proxying.py  test_review_mode.py  test_sse_downstream_server.py  test_tool_modification_scenarios.py  test_tool_scanning.py  test_tool_string.py  test_utils.py  test_wrapped_sse_server.py
guardrail_providers/: __init__.py  llama_firewall.py  mock_provider.py
src/contextprotector/: __init__.py  __main__.py  _cli_old.py  approval_cli.py  cli_utils.py  guardrail_types.py  guardrails.py  mcp_config.py  mcp_json_cli.py  mcp_json_config.py  mcp_wrapper.py  quarantine.py  quarantine_cli.py  wrapper_config.py
src/contextprotector/guardrail_providers/: __init__.py  llama_firewall.py  mock_provider.py
test/: ansi_test_server.py  dynamic_downstream_server.py  logging_config.py  multi_tool_downstream_server.py  notification_test_server.py  prompt_test_server.py  resource_test_server.py  simple_downstream_server.py  simple_sse_server.py  sse_server_utils.py  test_ansi_visualization.py  test_approval_cli.py  test_basic_process_control.py  test_cli_argument_parsing.py  test_config_approval_security.py  test_dynamic_downstream_server.py  test_dynamic_wrapper.py  test_granular_approval_coverage_summary.md  test_granular_tool_approval.py  test_granular_wrapper_behavior.py  test_guardrails_loading.py  test_init.py  test_mcp_config_database.py  test_mcp_json_cli.py  test_mcp_json_config.py  test_mcp_multi_schema.py  test_mcp_wrapper.py  test_notification_forwarding.py  test_process_cleanup_simple.py  test_process_shutdown.py  test_prompt_proxying.py  test_quarantine.py  test_quarantine_integration.py  test_quarantine_release_simple.py  test_quarantine_release_tool.py  test_resource_proxying.py  test_review_mode.py  test_simple_downstream_server.py  test_sse_downstream_server.py  test_tool_modification_scenarios.py  (+5 more)
tests/: ansi_test_server.py  dynamic_downstream_server.py  logging_config.py  prompt_test_server.py  simple_downstream_server.py  simple_sse_server.py  test_ansi_visualization.py  test_dynamic_downstream_server.py  test_dynamic_wrapper.py  test_guardrail_blocking.py  test_guardrails_loading.py  test_mcp_config_database.py  test_mcp_wrapper.py  test_prompt_proxying.py  test_simple_downstream_server.py  test_sse_downstream_server.py  test_tool_string.py  test_wrapped_sse_server.py
