[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "context-protector"
version = "0.0.1"
authors = [
  { name="Trail of Bits", email="cliff.smith@trailofbits.com" },
]
description = "context-protector MCP security wrapper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-timeout>=2.4.0",
    "mcp==1.9.4",
    "ruff>=0.0.270",
    "psutil>=7.0.0",
    "llamafirewall>=1.0.3"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {text="MIT"}

[project.scripts]
context-protector = "contextprotector.__main__:main"

[project.urls]
Homepage = "https://github.com/trailofbits/context-protector"
Issues = "https://github.com/trailofbits/context-protector/issues"
